# autonomic.gandi

./: .drone.yml  README.md  play.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
meta/: main.yml
test/: conftest.py  test_gandi_dns.py
