[tool:pytest]
testpaths = test

[flake8]
max-line-length = 80

[isort]
line_length = 80
multi_line_output = 3
skip = .venv, .tox
include_trailing_comma = True

[metadata]
name = autonomic.gandi
author = decentral1se
version = 0.0.4

[options]
packages = find:
install_requires =
  ansible >= 2.9.6, <= 2.10
  dns-lexicon[gandi] >= 3.3.19, <= 3.4
